fix: ensure sufficient contrast
Related to https://github.com/camunda/web-modeler/issues/8832

--- a/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table-controls.css
+++ b/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table-controls.css
@@ -1,5 +1,5 @@
 .dmn-decision-table-container {
-  --allowed-values-placeholder-color: var(--color-grey-225-10-75);
+  --allowed-values-placeholder-color: var(--color-grey-225-10-35);
   --cell-description-editor-border-color: var(--color-grey-225-10-15);
   --create-inputs-border-color: var(--color-grey-225-10-75);
   --create-inputs-color: var(--color-grey-225-10-75);
@@ -13,8 +13,8 @@
   --context-menu-group-entry-hover-background-color: var(--color-grey-225-10-95);
   --drag-and-drop-handle-color: var(--color-grey-225-10-55);
   --drag-and-drop-handle-hover-color: var(--color-grey-225-10-15);
-  --form-control-label-color: var(--color-grey-225-10-55);
-  --hint-color: var(--color-grey-225-10-55);
+  --form-control-label-color: var(--color-grey-225-10-15);
+  --hint-color: var(--color-grey-225-10-15);
 }
 
 /* simple string edit */
